Add some new talbes and the logic for employees